Multi-module with one autoconfigure module and JDK 8